@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * changed messages for finished by callback or catalog check
   * introducing multiporcesssing in add.py
   * kill instead of reassign in copyArchive
   * sending jediTaskID to the pilot for anal jobs
